--- a/html/contacto.html
+++ b/html/contacto.html
@@ -13,18 +13,27 @@
 </head>
 
 <body>
-    <header>
-        <a href="../index.html"><img class="logo" src="../img/logo_bl.svg" alt="Logo de Scandal"></a>
 
-        <nav>
-            <ul>
-                <li><a href="../index.html"> Inicio </a></li>
-                <li><a href="integrantes.html"> Integrantes </a></li>
-                <li><a href="discografia.html"> Discografía </a></li>
-                <li><a href="videos.html"> Videos </a></li>
-                <li><a href="contacto.html"> Contacto </a></li>
-            </ul>
-        </nav>
+    <!-- NavBar Bootstrap -->
+    <header class="navbar navbar-expand-md">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo_bl.svg"
+                    alt="Logo de Scandal"></a>
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <ul class="navbar-nav text-end">
+                    <li class="nav-item"><a class="" href="../index.html"> Inicio </a></li>
+                    <li class="nav-item"><a class="" href="integrantes.html"> Integrantes </a></li>
+                    <li class="nav-item"><a class="" href="discografia.html"> Discografía </a></li>
+                    <li class="nav-item"><a class="" href="videos.html"> Videos </a></li>
+                    <li class="nav-item"><a class="" aria-current="page" href="contacto.html"> Contacto </a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -88,6 +97,7 @@
 
     </footer>
 
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
