--- a/html/discografia.html
+++ b/html/discografia.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- NavBar Bootstrap -->
-    <header class="navbar navbar-expand-md">
+    <header class="navbar navbar-expand-md position-sticky top-0">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo_bl.svg"
                     alt="Logo de Scandal"></a>
@@ -91,24 +91,25 @@
 
     </main>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="d-flex justify-content-between">
         <ul>
-            <ul>
-                <li><a href="https://www.scandal-4.com/" target="_blank"><img class="logoWeb" src="../img/favicon.ico"
-                            alt="Logo Scandal Web"></a></li>
-                <li><a href="https://open.spotify.com/intl-es/artist/7hTZwqQILVH4bAbN67CeEz" target="_blank"><img
-                            src="../img/spotify.png" alt="Logo Spotify"></a></li>
-                <li><a href="https://x.com/scandal_band?" target="_blank"><img src="../img/x.png" alt="Logo X"></a></li>
-                <li><a href="https://www.instagram.com/scandal_band_official/" target="_blank"><img
-                            src="../img/instagram.png" alt="Logo Instagram"></a></li>
-                <li><a href="https://www.facebook.com/scandalofficial/" target="_blank"><img src="../img/facebook.png"
-                            alt="Logo Facebook"></a></li>
-                <li><a href="https://www.youtube.com/@scandal" target="_blank"><img src="../img/youtube.png"
-                            alt="Logo YouTube"></a></li>
-                <li><a href="https://www.tiktok.com/@scandal_band_official" target="_blank"><img src="../img/tiktok.png"
-                            alt="Logo TikTok"></a></li>
-            </ul>
+            <li><a href="https://www.scandal-4.com/" target="_blank"><img class="logoWeb" src="../img/favicon.ico"
+                        alt="Logo Scandal Web"></a></li>
+            <li><a href="https://open.spotify.com/intl-es/artist/7hTZwqQILVH4bAbN67CeEz" target="_blank"><img
+                        src="../img/spotify.png" alt="Logo Spotify"></a></li>
+            <li><a href="https://x.com/scandal_band?" target="_blank"><img src="../img/x.png" alt="Logo X"></a></li>
+            <li><a href="https://www.instagram.com/scandal_band_official/" target="_blank"><img
+                        src="../img/instagram.png" alt="Logo Instagram"></a></li>
+            <li><a href="https://www.facebook.com/scandalofficial/" target="_blank"><img src="../img/facebook.png"
+                        alt="Logo Facebook"></a></li>
+            <li><a href="https://www.youtube.com/@scandal" target="_blank"><img src="../img/youtube.png"
+                        alt="Logo YouTube"></a></li>
+            <li><a href="https://www.tiktok.com/@scandal_band_official" target="_blank"><img src="../img/tiktok.png"
+                        alt="Logo TikTok"></a></li>
         </ul>
+
+        <p>By Jonás | 2023</p>
 
     </footer>
 
