--- a/html/videos.html
+++ b/html/videos.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- NavBar Bootstrap -->
-    <header class="navbar navbar-expand-md">
+    <header class="navbar navbar-expand-md position-sticky top-0">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo_bl.svg"
                     alt="Logo de Scandal"></a>
@@ -72,7 +72,8 @@
 
     </main>
 
-    <footer>
+    <!-- Footer -->
+    <footer class="d-flex justify-content-between">
         <ul>
             <li><a href="https://www.scandal-4.com/" target="_blank"><img class="logoWeb" src="../img/favicon.ico"
                         alt="Logo Scandal Web"></a></li>
@@ -88,6 +89,8 @@
             <li><a href="https://www.tiktok.com/@scandal_band_official" target="_blank"><img src="../img/tiktok.png"
                         alt="Logo TikTok"></a></li>
         </ul>
+
+        <p>By Jonás | 2023</p>
 
     </footer>
 
