Cards Integrantes Responsive

--- a/html/integrantes.html
+++ b/html/integrantes.html
@@ -42,8 +42,8 @@
 
         <h1>Integrantes de Scandal</h1>
 
-        <section>
-            <div>
+        <section class="row">
+            <div class="col-xl-3 col-md-6 col-sm-12">
                 <p class="titulo"> HARUNA </p>
                 <img class="fotoIntegrantes" src="../img/HP_HARUNA.jpg" alt="Foto Haru">
 
@@ -57,7 +57,7 @@
 
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-6 col-sm-12">
                 <p class="titulo"> MAMI </p>
                 <img class="fotoIntegrantes" src="../img/HP_MAMI.jpg" alt="Foto Mami">
 
@@ -71,7 +71,7 @@
 
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-6 col-sm-12">
                 <p class="titulo"> TOMOMI </p>
                 <img class="fotoIntegrantes" src="../img/HP_TOMOMI.jpg" alt="Foto Tomo">
 
@@ -85,7 +85,7 @@
 
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-6 col-sm-12">
                 <p class="titulo"> RINA </p>
                 <img class="fotoIntegrantes" src="../img/HP_RINA.jpg" alt="Foto Rina">
 
