--- a/html/videos.html
+++ b/html/videos.html
@@ -41,33 +41,172 @@
     <main>
         <h1>Videos</h1>
 
-        <section>
-            <div>
+        <section class="row">
+            <div class="col-xl-6 col-md-6 col-sm-12">
                 <p class="titulo"> ハイライトの中で僕らずっと </p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YbPeoYlmxBE?si=hZmgb1FV2Yw7TAk3"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/YbPeoYlmxBE?si=hZmgb1FV2Yw7TAk3" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
             </div>
 
-            <div>
+            <div class="col-xl-6 col-md-6 col-sm-12">
                 <p class="titulo"> Line of sight </p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/0-57qaUKGas?si=MVAIQvYWMN32Z2sq"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/0-57qaUKGas?si=MVAIQvYWMN32Z2sq" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
             </div>
 
-            <div>
+            <div class="col-xl-6 col-md-6 col-sm-12">
                 <p class="titulo"> MIRROR </p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KJkMqoozKV4?si=E1SjRnHsDaY1BLpr"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/KJkMqoozKV4?si=E1SjRnHsDaY1BLpr" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
             </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> 愛にならなかったのさ </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/KdGRgxYYLas?si=UEEvKcFTNR3F1qr4" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> one more time </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/3T-j3lf9gIE?si=hIFiO-GYRiQcDbnJ" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> アイボリー </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/B88LWNUwuNM?si=QqQ1yM70XKBq0n8w" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> eternal </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/-174Ji-llSM?si=9vF-GsxXu-yd9fde" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> Living in the city </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/9KvdsNSCFGM?si=uhb014cvZQ50ixUl" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> 月 </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/ElPGe6nnIpk?si=0RFunsOOcFnFFFHY" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> Tonight </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/71P55qhqaLs?si=00PW3pfA5lbjjl-1" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> A.M.D.K.J. </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/3pDpYur3Nwc?si=sWmQjQhzi3NG4BV8" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> 最終兵器、君 </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/mEnXf3CiPSY?si=y5I7tBcCCfwNPUbz" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> Fuzzy </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/AOL2W8HOQjA?si=X1I5rSnFZdLE-9rU" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> まばたき </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/fCGjaaAYJT8?si=FPwg6khfqMjgNBpf" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
+            <div class="col-xl-6 col-md-6 col-sm-12">
+                <p class="titulo"> マスターピース </p>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/t-qVp94jB1o?si=wWdd9eoPV2DmOoxv" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+
         </section>
 
     </main>
