Agregados discos de estudio

--- a/html/discografia.html
+++ b/html/discografia.html
@@ -41,8 +41,8 @@
     <main>
         <h1>Discografía</h1>
 
-        <section>
-            <div>
+        <section class="row">
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
                 <p class="titulo"> MIRROR </p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/5q0KXQ9zQWjFvYB3Mtvbcv?utm_source=generator&theme=0"
@@ -51,7 +51,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
                 <p class="titulo"> Kiss from the darkness </p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/5qAQHDiAP3p84S1l22G1K7?utm_source=generator&theme=0"
@@ -60,7 +60,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
                 <p class="titulo">HONEY</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/62wG7uQI1PNRJ47n5JQf1n?utm_source=generator&theme=0"
@@ -69,7 +69,7 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div>
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
                 <p class="titulo">YELLOW</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/3jUQLngJWwEUStBeriSbe0?utm_source=generator&theme=0"
@@ -78,10 +78,55 @@
                     loading="lazy"></iframe>
             </div>
 
-            <div>
-                <p class="titulo">HELLOW WORLD</p>
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">HELLO WORLD</p>
                 <iframe style="border-radius:12px"
                     src="https://open.spotify.com/embed/album/427uth9E7qpwKPaGZ5iLx2?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">STANDARD</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/album/00KuDDUhbK1eJgjoAIbbg8?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">Queens are trumps -切り札はクイーン-</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/album/4biujDeF4tKF2rX6pG7oQs?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">BABY ACTION</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/album/4q6ka5GVi5yPCUKV06HqXP?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">TEMPTATION BOX</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/album/02Mw5RJbogEiPXoPIj4LVt?utm_source=generator&theme=0"
+                    width="100%" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+
+            <div class="col-xl-3 col-md-4 col-sm-6 col-12">
+                <p class="titulo">BEST★SCANDAL</p>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/album/1pBIHdlkGurT9kkPNNIi07?utm_source=generator&theme=0"
                     width="100%" height="152" frameBorder="0" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
