Reubicación del mapa, cambio fondos, mejora títulos

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,40 +41,56 @@
     <main>
         <h1>Formulario de Contacto</h1>
 
-        <form>
+        <!-- Información de contacto con menú desplegable para seleccionar país -->
+        <div class="row mx-4">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
 
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" placeholder="Ingrese su nombre">
+                <form>
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre" placeholder="Ingrese su nombre">
 
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" placeholder="Ingrese su apellido">
+                    <label for="apellido">Apellido</label>
+                    <input type="text" id="apellido" placeholder="Ingrese su apellido">
 
-            <label for="correo">Correo electrónico</label>
-            <input type="text" id="correo" placeholder="ejemplo@ejemplo.com">
+                    <label for="correo">Correo electrónico</label>
+                    <input type="text" id="correo" placeholder="ejemplo@ejemplo.com">
 
-            <label for="pais">País</label>
-            <select id="pais">
-                <option>Argentina</option>
-                <option>Bolivia</option>
-                <option>Brasil</option>
-                <option>Chile</option>
-                <option>Colombia</option>
-                <option>Ecuador</option>
-                <option>México</option>
-                <option>Paraguay</option>
-                <option>Perú</option>
-                <option>Uruguay</option>
-                <option>Venezuela</option>
-                <option>Otro</option>
-            </select>
+                    <label for="pais">País</label>
+                    <select id="pais">
+                        <option>Argentina</option>
+                        <option>Bolivia</option>
+                        <option>Brasil</option>
+                        <option>Chile</option>
+                        <option>Colombia</option>
+                        <option>Ecuador</option>
+                        <option>México</option>
+                        <option>Paraguay</option>
+                        <option>Perú</option>
+                        <option>Uruguay</option>
+                        <option>Venezuela</option>
+                        <option>Otro</option>
+                    </select>
 
-            <label for="mensaje">Mensaje</label>
-            <textarea name="" id="mensaje" cols="30" rows="10" placeholder="Deje su mensaje"></textarea>
+                    <label for="mensaje">Mensaje</label>
+                    <textarea name="" id="mensaje" cols="30" rows="10" placeholder="Deje su mensaje"></textarea>
 
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Borrar">
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Borrar">
+                </form>
 
-        </form>
+            </div>
+
+            <!-- Mapa de Google -->
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                <h2>Ubicación</h2>
+
+                <iframe class="mapa"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.771601476987!2d139.7062994757867!3d35.657998472594684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5c2d400001%3A0xf17ae681f8b5d663!2sVictor%20Entertainment!5e0!3m2!1ses!2sar!4v1698014515446!5m2!1ses!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+        </div>
 
     </main>
 
