--- a/html/discografia.html
+++ b/html/discografia.html
@@ -38,10 +38,11 @@
         </div>
     </header>
 
+    <!-- Discografía linkeada de Spotify -->
     <main>
         <h1>Discografía</h1>
 
-        <section class="row">
+        <section class="row mx-4">
             <div class="col-xl-3 col-md-4 col-sm-6 col-12">
                 <p class="titulo"> MIRROR </p>
                 <iframe style="border-radius:12px"
