--- a/html/integrantes.html
+++ b/html/integrantes.html
@@ -38,11 +38,12 @@
         </div>
     </header>
 
+    <!-- Información de las integrantes de la banda -->
     <main>
 
         <h1>Integrantes de Scandal</h1>
 
-        <section class="row">
+        <section class="row mx-4">
             <div class="col-xl-3 col-md-6 col-sm-12">
                 <p class="titulo"> HARUNA </p>
                 <img class="fotoIntegrantes" src="../img/HP_HARUNA.jpg" alt="Foto Haru">
