--- a/html/videos.html
+++ b/html/videos.html
@@ -38,10 +38,11 @@
         </div>
     </header>
 
+    <!-- Videos linkeados de YouTube -->
     <main>
         <h1>Videos</h1>
 
-        <section class="row">
+        <section class="row mx-4">
             <div class="col-xl-4 col-md-6 col-sm-12">
                 <p class="titulo"> ハイライトの中で僕らずっと </p>
                 <div class="embed-responsive embed-responsive-16by9">
