--- a/index.html
+++ b/index.html
@@ -43,13 +43,39 @@
             <h2>Sitio web promotor de la banda japonesa Scandal en Argentina</h2>
         </div>
 
-        <div class="cajaFotos">
+        <!-- Carousel que se visualiza hasta 991px -->
+        <div id="carouselExampleAutoplaying" class="carousel slide d-md-block d-lg-none mx-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/foto-2.jpg" class="d-block w-100 fotoVivo" alt="Foto Vivo 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/foto-1.jpg" class="d-block w-100 fotoVivo" alt="Foto Vivo 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/foto-3.jpg" class="d-block w-100 fotoVivo" alt="Foto Vivo 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- 3 imágenes visualizadas a partir de 992px -->
+        <div class="cajaFotos d-none d-md-none d-lg-block mx-4">
             <img class="fotoVivo" src="img/foto-1.jpg" alt="Foto Vivo 1">
             <img class="fotoVivo" src="img/foto-2.jpg" alt="Foto Vivo 2">
             <img class="fotoVivo" src="img/foto-3.jpg" alt="Foto Vivo 3">
         </div>
 
-        <div>
+        <section class="mx-4">
             <h2>Historia de la banda</h2>
 
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora ullam totam possimus labore accusantium
@@ -77,15 +103,6 @@
                 molestias accusantium non, laboriosam rerum neque nisi asperiores nulla blanditiis.
             </p>
 
-        </div>
-
-        <section>
-            <h2>Ubicación</h2>
-
-            <iframe class="mapa"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.771601476987!2d139.7062994757867!3d35.657998472594684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5c2d400001%3A0xf17ae681f8b5d663!2sVictor%20Entertainment!5e0!3m2!1ses!2sar!4v1698014515446!5m2!1ses!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
     </main>
