--- a/html/contacto.html
+++ b/html/contacto.html
@@ -84,7 +84,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                 <h2>Ubicación</h2>
 
-                <iframe class="mapa"
+                <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.771601476987!2d139.7062994757867!3d35.657998472594684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b5c2d400001%3A0xf17ae681f8b5d663!2sVictor%20Entertainment!5e0!3m2!1ses!2sar!4v1698014515446!5m2!1ses!2sar"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
