Mayor margen en eje y en imagen

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </p>
             </article>
 
-            <aside class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 row align-items-center">
+            <aside class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-6 row align-items-center my-3">
                 <img class="fotoSola col" src="img/foto-0.jpg" alt="Foto Vivo 0">
             </aside>
 
